--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,7 +3,10 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
-
+    lintOptions{
+        disable 'InvalidPackage'
+        checkReleaseBuilds false
+    }
     defaultConfig {
         applicationId "com.abcddd"
         minSdkVersion 16
